--- a/trunk/README
+++ b/trunk/README
@@ -639,6 +639,7 @@ Clinton Carr <ccarr@websocket.com>
 Peter Liqun Na <liqunna@cs.sunysb.edu>
 Frank Adcock <frank@bushlife.com.au>
 Daniel A Nieten <dnieten@bellsouth.net>
+Xu Yifeng <xuyifeng@www.kali.com.cn>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
