--- a/trunk/README
+++ b/trunk/README
@@ -640,6 +640,7 @@ Peter Liqun Na <liqunna@cs.sunysb.edu>
 Frank Adcock <frank@bushlife.com.au>
 Daniel A Nieten <dnieten@bellsouth.net>
 Xu Yifeng <xuyifeng@www.kali.com.cn>
+Valery Arkhangorodsky <avalery@geocities.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
