--- a/trunk/TAO/examples/POA/On_Demand_Activation/README
+++ b/trunk/TAO/examples/POA/On_Demand_Activation/README
@@ -40,7 +40,9 @@ runs the ORB.
 USAGE:
 ======
 
-%server [-ORBhost host ] [-ORBport port] [-ORBobjrefstyle URL ]
+You can use the run_test.pl perl script or follow these directions:
+
+%server [-ORBport port] [-ORBobjrefstyle URL] [-f IOR file]
 
 client:
 ======
@@ -49,9 +51,9 @@ client:
         TAO/tests/POA/Generic_Servant/client
         i.e ../Generic_Servant/client
 
-% client -k IOR
+% client [-k IOR] [-f IOR file]
 
-where IOR is got from the server output.
+where IOR is got from the server output to the screen or to the IOR file.
 
 To Test:
 =======
@@ -80,14 +82,14 @@ Servant Locator:
 
 4. The first time a client is run you should get an output
 
-        2
+        2 (or 1)
 
 along with some diagnostic messages.
 
 5. Subsequent runs of the client program results in the output
-   incremented by 2.
+   incremented by 2 (or 1).
 
-6. Thus, the second run of client should give you an output 4.
+6. Thus, the second run of client should give you an output 4 (or 2).
 
 
 
