--- a/trunk/apps/gperf/ChangeLog
+++ b/trunk/apps/gperf/ChangeLog
@@ -1,5 +1,8 @@
 Tue Sep 22 02:12:53 1998  Douglas C. Schmidt  <schmidt@lambada.cs.wustl.edu>
 
+	* tests: Added a new test for the type of input that is causing
+ 	  problems with TAO's IDL compiler.
+
 	* src/Key_List.cpp (output_lookup_array): Changed the assertion
  	  from assert (i != 0) to assert (i >= 0) since I think that's
  	  correct... (ah, so THAT's why comments are important thinks the
