*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -640,6 +640,7 @@ Frank Adcock <frank@bushlife.com.au>
 Daniel A Nieten <dnieten@bellsouth.net>
 Xu Yifeng <xuyifeng@www.kali.com.cn>
 Valery Arkhangorodsky <avalery@geocities.com>
+Alan Scheinine <scheinin@crs4.it>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
