--- a/trunk/examples/Bounded_Packet_Relay/README
+++ b/trunk/examples/Bounded_Packet_Relay/README
@@ -35,15 +35,15 @@ Settings commands:
 
   2 <input packet arrival period (in usec)>  
 
-     Minimum value is 1 usec, defaults to 500 usec (1/2 msec).
+     Minimum value is 1 usec, defaults to 10000 usec (10 msec).
 
   3 <output packet transmission period (in usec)>
 
-     Minimum value is 1 usec, defaults to 1000 usec (1 msec).
+     Minimum value is 1 usec, defaults to 10000 usec (10 msec).
 
   4 <limit on duration of transmission (in usec)>
 
-     Minimum value is 1 usec, defaults to 1500000 usec (1 1/2 sec).
+     Minimum value is 1 usec, defaults to 20000000 usec (20 sec).
      A value of 0 is also a valid input, in which case no limit
      will be placed on the duration of the transmission (it will
      end when all packets have been relayed from the input device
@@ -52,8 +52,12 @@ Settings commands:
   5 <logging level>
      
      0 - does no logging
-     1 - reports time each packet arrived at the output device
-         as well as the contents of the message.
+     1 - logs packets created by the input device
+     2 - logs packets consumed by the output device
+     4 - prints contents of packets consumed by the output device
+
+     To set several flags, pass their sum as the logging level value:
+     e.g., a logging level value of 7 turns on all possible logging.
 
 Action commands:
 
@@ -176,6 +180,8 @@ Source Files: Thread_Bounded_Packet_Relay.h
               Thread_Bounded_Packet_Relay.cpp
               BPR_Driver.h
               BPR_Driver.cpp
+              BPR_Driver_T.h
+              BPR_Driver_T.cpp
               bpr_thread.cpp
 
 Make file:    Makefile
@@ -183,3 +189,6 @@ Make file:    Makefile
 Doc file:     README (this file)
 
 Executable:   bpr_thread
+
+
+
