--- a/trunk/apps/JAWS/ChangeLog
+++ b/trunk/apps/JAWS/ChangeLog
@@ -1,7 +1,8 @@
 Fri Sep 25 23:29:14 1998  David L. Levine  <levine@cs.wustl.edu>
 
         * server/IO.cpp (receive_file,transmit_file): changed
-          NOMAP to ACE_NOMAP.
+          NOMAP to ACE_NOMAP.  Thanks to Dann Corbit
+          <DCorbit@SolutionsIQ.com> for reporting this.
 
 Thu Sep 17 18:53:05 1998  Carlos O'Ryan  <coryan@cs.wustl.edu>
 
