added Dann Corbit <DCorbit@SolutionsIQ.com>

--- a/trunk/README
+++ b/trunk/README
@@ -642,6 +642,7 @@ Xu Yifeng <xuyifeng@www.kali.com.cn>
 Valery Arkhangorodsky <avalery@geocities.com>
 Alan Scheinine <scheinin@crs4.it>
 Andrew G. Harvey <agh@cisco.com>
+Dann Corbit <DCorbit@SolutionsIQ.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
