--- a/trunk/apps/gperf/ChangeLog
+++ b/trunk/apps/gperf/ChangeLog
@@ -1,5 +1,13 @@
 Sun Sep 27 00:04:18 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
+	* src/Key_List: Replaced the use of "int" with "unsigned int" for
+ 	  parameters and hash values.
+
+	* src/Key_List: Fixed the code so that if we change over to using
+ 	  the switch statement then we use the already generated keyword
+ 	  table appropriately.  This prevents unnecessary warnings from
+ 	  some C++ compilers.  Thanks to David Levine for reporting this.
+
 	* src/Key_List.cpp (output): If it's not possible to use the
  	  lookup_array implementation of -D (e.g., because there aren't
  	  enough empty slots in the lookup_array), then default to using
