--- a/trunk/README
+++ b/trunk/README
@@ -643,6 +643,7 @@ Valery Arkhangorodsky <avalery@geocities.com>
 Alan Scheinine <scheinin@crs4.it>
 Andrew G. Harvey <agh@cisco.com>
 Dann Corbit <DCorbit@SolutionsIQ.com>
+james@tsunami.com
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
