--- a/trunk/apps/drwho/ChangeLog
+++ b/trunk/apps/drwho/ChangeLog
@@ -1,3 +1,9 @@
+Wed Sep 30 13:00:52 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
+
+	* Fixed a bunch of warnings related to char * and const char *.
+  	  Thanks to Sandro Doro <doros@aureus.sublink.org> for reporting
+ 	  this.
+
 Sat Sep 12 21:21:01 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
 	* Made zillions of changes to "ACE"ify all of the code.  Drwho is
