--- a/trunk/README
+++ b/trunk/README
@@ -231,10 +231,11 @@ Tim Harrison <harrison@cs.wustl.edu>
 James Hu <jxh@cs.wustl.edu>
 Prashant Jain <pjain@cs.wustl.edu>
 Vishal Kachroo <vishal@cs.wustl.edu>
-Michael Kircher <mk1@cs.wustl.edu>
+Michael Kircher <mlkirche@trick.informatik.uni-stuttgart.de>
 Yamuna Krishnamurthy <yamuna@cs.wustl.edu>
 Fred Kuhns <fredk@cs.wustl.edu>
 David Levine <levine@cs.wustl.edu>
+Balachandran Natarajan <bala@cs.wustl.edu>
 Kirthika Parameswaran <kirthika@cs.wustl.edu>
 Carlos O'Ryan <coryan@cs.wustl.edu>
 Jeff Parsons <jp4@cs.wustl.edu>
@@ -643,7 +644,7 @@ Valery Arkhangorodsky <avalery@geocities.com>
 Alan Scheinine <scheinin@crs4.it>
 Andrew G. Harvey <agh@cisco.com>
 Dann Corbit <DCorbit@SolutionsIQ.com>
-james@tsunami.com
+James <james@tsunami.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
