*** empty log message ***

--- a/trunk/TAO/orbsvcs/tests/Simple_Naming/README
+++ b/trunk/TAO/orbsvcs/tests/Simple_Naming/README
@@ -27,7 +27,8 @@ option is specified, only one test runs.
 NOTE: if running tests manually, Naming Service has to be restarted before each test
 (this is due to some tests not 'cleaning up' bindings after themselves).
 
-
+NOTE: destroy test will not produce desired output if POA 'recreates
+servants on request'.
 
 DESCRIPTION AND EXPECTED OUTPUT FOR EACH TEST
 *******************************************
@@ -107,6 +108,8 @@ NotFound  exception (case 3) works properly
 
 Iterator Test.
 
+Checks iterator functions.
+
 Bind () objects with the following names foo1, foo2, foo3, and foo4
 into the root Naming Context.
 
@@ -128,6 +131,19 @@ Fourth binding: foo4
 
 Destroy Test. 
 
+Makes sure destroy method is working properly.
+
+Create a context and bind an object under it.
+Attempt to destroy the context - NotEmpty exception should be raised.
+
+Unbind the object and call destroy on the context.
+Attempt to call destroy on the object again - OBJECT_NOT_EXIST
+exception should be raised.
+
 
 Expected Output:
+
+NotEmpty exception works properly
+Destroy works properly
+
 ********************************************
