--- a/trunk/README
+++ b/trunk/README
@@ -645,6 +645,7 @@ Alan Scheinine <scheinin@crs4.it>
 Andrew G. Harvey <agh@cisco.com>
 Dann Corbit <DCorbit@SolutionsIQ.com>
 James <james@tsunami.com>
+Jason Milley <Jason.Milley.jcmilley@nt.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
