*** empty log message ***

--- a/trunk/apps/gperf/ChangeLog
+++ b/trunk/apps/gperf/ChangeLog
@@ -1,7 +1,8 @@
 Wed Oct  7 01:20:35 1998  Alexander Babu Arulanthu  <alex@cs.wustl.edu>
 
 	* tests/test-6.exp: 
-	  Updated thif file to the current help message.
+	  Updated thif file to the current help message. Thanks to Hans
+	  for reporting this.
 
 
 Tue Oct  6 11:51:47 1998  Alexander Babu Arulanthu  <alex@cs.wustl.edu>
