--- a/trunk/README
+++ b/trunk/README
@@ -646,6 +646,7 @@ Andrew G. Harvey <agh@cisco.com>
 Dann Corbit <DCorbit@SolutionsIQ.com>
 James <james@tsunami.com>
 Jason Milley <Jason.Milley.jcmilley@nt.com>
+Ulf Jaehrig <jaehrig@desys.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
