*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -648,6 +648,7 @@ James <james@tsunami.com>
 Jason Milley <Jason.Milley.jcmilley@nt.com>
 Ulf Jaehrig <jaehrig@desys.com>
 Peter Nordlund <petern@nada.kth.se>
+Mark Weel <weel@lucent.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
